# mimir

./: .dockerignore  .env.example  .gitignore  alembic.ini  design_decisions.md  docker-compose.override.yaml  docker-compose.yaml  infrastructure_and_tools_development_plan.txt  migration_checklist.md  project_tracking.md  pyproject.toml  readme.md  requirements.md
.github/workflows/: ci.yaml
docs/: architecture.md  entity-guide.md  overview.md  requirements.md
infrastructure/docker/api/: Dockerfile
infrastructure/docker/postgres/: Dockerfile
init-scripts/: 01-create-extensions.sql
migrations/: README.md  __init__.py  env.py  migrate.py
migrations/versions/: 001_create_tenants.down.sql  001_create_tenants.up.sql  002_artifact.down.sql  002_artifact.up.sql  002_create_artifacts.down.sql  002_create_artifacts.up.sql  003_create_intents.down.sql  003_create_intents.up.sql  003_relation.down.sql  003_relation.up.sql  004_create_decisions.down.sql  004_create_decisions.up.sql  004_embedding.down.sql  005_create_spans.down.sql  005_create_spans.up.sql  005_provenance.up.sql  006_create_relations.down.sql  006_create_relations.up.sql  007_add_embeddings.down.sql  007_add_embeddings.up.sql  008_add_provenance.down.sql  008_add_provenance.up.sql  009_add_ollama_models.down.sql  009_add_ollama_models.up.sql  010_add_source_system.down.sql  010_add_source_system.up.sql
scripts/: ingest_file.py
src/mimir/: __init__.py  config.py  database.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_schemas.py
v2/: .dockerignore  .env.example  .gitignore  pyproject.toml
v2/docs/: api-design.md  data-model.md  design-decisions.md  overview.md  schema-review.md  search-architecture.md
v2/migrations/: __init__.py
(+75 files in other folders)
